Make entire area of cards clickable

--- a/template.html
+++ b/template.html
@@ -77,29 +77,27 @@
         <div class="eight columns offset-by-two">
           <h1>Open Source Projects</h1>
 
-          <div id="smile-o-meter" class="card">
-            <h3>
-              <a target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
+          <a class="card-link" target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
+            <div id="smile-o-meter" class="card">
+              <h3>
                 <strong>Smile-O-Meter</strong>
                 <i class="fab fa-github"></i>
-              </a>
-            </h3>
+              </h3>
 
-            <a target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
               <img alt="A picture of the Smile-O-Meter open source project" src="images/smile-o-meter.png" />
-            </a>
 
-            <p>
-              The Smile-O-Meter (under active development) is a neural network
-              used to classify images as one of seven emotions. It is written
-              "from scratch", that is, without the use of frameworks such as
-              TensorFlow and Keras. My main goal in working on the Smile-O-Meter
-              was to learn more about machine learning, neural nets, and Python,
-              and to that end it's been a success! In the future I'll be publishing
-              blog posts that describe the architecture and effectiveness of the
-              system.
-            </p>
-          </div>
+              <p>
+                The Smile-O-Meter (under development) is a neural network
+                used to classify images as one of seven emotions. It is written
+                "from scratch", that is, without the use of frameworks such as
+                TensorFlow and Keras. My main goal in working on the Smile-O-Meter
+                was to learn more about machine learning, neural nets, and Python,
+                and to that end it's been a success! In the future I'll be publishing
+                blog posts that describe the architecture and effectiveness of the
+                system.
+              </p>
+            </div>
+          </a>
         </div>
       </section>
 
@@ -107,72 +105,72 @@
         <div class="eight columns offset-by-two">
           <h1>Recommendations</h1>
 
-          <div class="card">
-            <a target="_blank" href="https://www.linkedin.com/in/josh-wilson-6052081/">
+          <a class="card-link" target="_blank" href="https://www.linkedin.com/in/josh-wilson-6052081/">
+            <div class="card">
               <h3>
                 <strong>Josh Wilson</strong>
                 <i class="fab fa-linkedin"></i>
               </h3>
 
               <h5>VP of Product Management at Raizlabs</h5>
-            </a>
 
-            <blockquote>
-              <em>
-                Dan is an extremely effective developer because his communication skills
-                are as strong as his technical ability and he understands the value
-                of flexibility and empathy when working in a team. He also has an infectious
-                enthusiasm for the craft of software and picks up new languages, patterns,
-                and technologies very quickly.
-              </em>
-            </blockquote>
-          </div>
+              <blockquote>
+                <em>
+                  Dan is an extremely effective developer because his communication skills
+                  are as strong as his technical ability and he understands the value
+                  of flexibility and empathy when working in a team. He also has an infectious
+                  enthusiasm for the craft of software and picks up new languages, patterns,
+                  and technologies very quickly.
+                </em>
+              </blockquote>
+            </div>
+          </a>
 
-          <div class="card">
-            <a href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
+          <a class="card-link" href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
+            <div class="card">
               <h3>
                 <strong>Jeremiah Atwood</strong>
                 <i class="fab fa-linkedin"></i>
               </h3>
 
               <h5>Web Platform Lead at Raizlabs</h5>
-            </a>
 
-            <blockquote>
-              <em>
-                Dan is an avid technologist who is always teaching himself new concepts
-                and technologies. On a recent Android and API project, he jumped in and
-                took over the API work, working directly with client developers to deliver
-                an ambitious product. Dan was also instrumental in kicking off an initiative
-                to record our internal Tech Talks and share them with the community.
-                His presentation on encryption was informative, well-researched, well-rehearsed
-                and demonstrated his grasp of a complex subject. Dan is definitely someone
-                you want on your team.
-              </em>
-            </blockquote>
-          </div>
+              <blockquote>
+                <em>
+                  Dan is an avid technologist who is always teaching himself new concepts
+                  and technologies. On a recent Android and API project, he jumped in and
+                  took over the API work, working directly with client developers to deliver
+                  an ambitious product. Dan was also instrumental in kicking off an initiative
+                  to record our internal Tech Talks and share them with the community.
+                  His presentation on encryption was informative, well-researched, well-rehearsed
+                  and demonstrated his grasp of a complex subject. Dan is definitely someone
+                  you want on your team.
+                </em>
+              </blockquote>
+            </div>
+          </a>
 
-          <div class="card">
-            <a href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
+          <a class="card-link" href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
+            <div class="card">
               <h3>
                 <strong>Matt Buckley</strong>
                 <i class="fab fa-linkedin"></i>
               </h3>
 
               <h5>Mobile Engineer at Raizlabs</h5>
-            </a>
 
-            <blockquote>
-              <em>
-                Dan consistently delivers high-quality code, asking probing questions
-                to clarify requirements and ensuring that features are completed to
-                spec and ahead of schedule. He boasts a wide-ranging skill set. Given
-                a set of requirements, Dan draws on expertise in Ruby, JavaScript, and
-                Elixir. He's friendly, fun-loving, and a true asset to any engineering
-                team. I'd gladly work with Dan again any time.
-              </em>
-            </blockquote>
-          </div>
+              <blockquote>
+                <em>
+                  Dan consistently delivers high-quality code, asking probing questions
+                  to clarify requirements and ensuring that features are completed to
+                  spec and ahead of schedule. He boasts a wide-ranging skill set. Given
+                  a set of requirements, Dan draws on expertise in Ruby, JavaScript, and
+                  Elixir. He's friendly, fun-loving, and a true asset to any engineering
+                  team. I'd gladly work with Dan again any time.
+                </em>
+              </blockquote>
+            </div>
+          </a>
         </div>
       </section>
 
@@ -180,22 +178,23 @@
         <div class="eight columns offset-by-two">
           <h1>Talks</h1>
 
-          <div class="card">
-            <iframe
-               class="video"
-               src="https://player.vimeo.com/video/217214978"
-               width="640"
-               height="360"
-               allowfullscreen>
-            </iframe>
+          <a class="card-link" href="https://player.vimeo.com/video/217214978" target="_blank">
+            <div class="card">
+              <iframe
+                 class="video"
+                 src="https://player.vimeo.com/video/217214978"
+                 width="640"
+                 height="360"
+                 allowfullscreen>
+              </iframe>
 
-            <p>
-              A math-light explanation of one of the core technologies of the internet:
-              public key cryptography. We'll use visuals and metaphors from Brit Cruise's
-              <a href="https://www.youtube.com/user/ArtOfTheProblem" target="_blank">
-                 Art of the Problem</a> video series on YouTube to explore this topic in-depth.
-            </p>
-          </div>
+              <p>
+                A math-light explanation of one of the core technologies of the internet:
+                public key cryptography. We'll use visuals and metaphors from Brit Cruise's
+                Art of the Problem video series on YouTube to explore this topic in-depth.
+              </p>
+            </div>
+          </a>
         </div>
       </section>
     </main>
