--- a/template.html
+++ b/template.html
@@ -228,6 +228,6 @@
         </div>
       </section>
     </main>
-    <script src="index.min.js"></script>
+    <script type="text/javascript" src="index.min.js"></script>
   </body>
 </html>
