--- a/template.html
+++ b/template.html
@@ -167,19 +167,19 @@
           <ul id="recommendation-toggle">
             <li>
               <a href="javascript:void(0)">
-                <i class="fas fa-circle" data-card-number=0></i>
+                <i class="fas fa-circle" data-card-index="0"></i>
               </a>
             </li>
 
             <li>
               <a href="javascript:void(0)">
-                <i class="far fa-circle" data-card-number=1></i>
+                <i class="far fa-circle" data-card-index="1"></i>
               </a>
             </li>
 
             <li>
               <a href="javascript:void(0)">
-                <i class="far fa-circle" data-card-number=2></i>
+                <i class="far fa-circle" data-card-index="2"></i>
               </a>
             </li>
           </ul>
