Add latest open source project and public speaking.

--- a/template.html
+++ b/template.html
@@ -77,13 +77,30 @@
         <div class="eight columns offset-by-two">
           <h1>Open Source Projects</h1>
 
+          <a id="hyp" class="card" target="_blank" href="https://www.github.com/murphydbuffalo/hyp/">
+            <h3>
+              <strong>Hyp</strong>
+              <i class="fab fa-github"></i>
+            </h3>
+
+            <img alt="A screenshot of Hyp, an open source A/B testing tool for Ruby on Rails" src="images/hyp.png" />
+
+            <p>
+              Minimal configuration, statistically valid A/B testing for Ruby on
+              Rails. Hyp (as in "hypothesis") allows you to easily run, monitor,
+              and understand A/B tests from your Rails app. Hyp lets you A/B test
+              any part of your application! Test email content, algorithms,
+              server-rendered pages, or anything else you like.
+            </p>
+          </a>
+
           <a id="smile-o-meter" class="card" target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
             <h3>
               <strong>Smile-O-Meter</strong>
               <i class="fab fa-github"></i>
             </h3>
 
-            <img alt="A picture of the Smile-O-Meter open source project" src="images/smile-o-meter.png" />
+            <img alt="A screenshot of the Smile-O-Meter an open source project with a smiley that smiles when you do." src="images/smile-o-meter.png" />
 
             <p>
               The Smile-O-Meter (under development) is a neural network
@@ -203,6 +220,22 @@
               A math-light explanation of one of the core technologies of the internet:
               public key cryptography. We'll use visuals and metaphors from Brit Cruise's
               Art of the Problem video series on YouTube to explore this topic in-depth.
+            </p>
+          </a>
+
+          <a class="card" href="https://player.vimeo.com/video/373673244" target="_blank">
+            <iframe
+              class="video"
+              src="https://player.vimeo.com/video/373673244"
+              width="640"
+              height="360"
+              allowfullscreen>
+            </iframe>
+
+            <p>
+              How to use the employee recognition and rewards program Bonusly
+              to mitigate cognitive bias, enabling teams to make better decisions
+              and learn more effectively. Based on Thinking in Bets by Annie Duke.
             </p>
           </a>
         </div>
