Put talks and projects into carousel sliders.

--- a/template.html
+++ b/template.html
@@ -94,7 +94,7 @@
             </p>
           </a>
 
-          <a id="smile-o-meter" class="card" target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
+          <a id="smile-o-meter" class="card hidden" target="_blank" href="https://www.github.com/murphydbuffalo/smile-o-meter/">
             <h3>
               <strong>Smile-O-Meter</strong>
               <i class="fab fa-github"></i>
@@ -113,6 +113,20 @@
               system.
             </p>
           </a>
+
+          <ul id="projects-carousel" class="carousel">
+            <li>
+              <a href="javascript:void(0)">
+                <i class="fas fa-circle" data-card-index="0"></i>
+              </a>
+            </li>
+
+            <li>
+              <a href="javascript:void(0)">
+                <i class="far fa-circle" data-card-index="1"></i>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -181,7 +195,7 @@
             </blockquote>
           </a>
 
-          <ul id="recommendation-toggle">
+          <ul id="recommendations-carousel" class="carousel">
             <li>
               <a href="javascript:void(0)">
                 <i class="fas fa-circle" data-card-index="0"></i>
@@ -223,7 +237,7 @@
             </p>
           </a>
 
-          <a class="card" href="https://player.vimeo.com/video/373673244" target="_blank">
+          <a class="card hidden" href="https://player.vimeo.com/video/373673244" target="_blank">
             <iframe
               class="video"
               src="https://player.vimeo.com/video/373673244"
@@ -238,9 +252,24 @@
               and learn more effectively. Based on Thinking in Bets by Annie Duke.
             </p>
           </a>
+
+          <ul id="talks-carousel" class="carousel">
+            <li>
+              <a href="javascript:void(0)">
+                <i class="fas fa-circle" data-card-index="0"></i>
+              </a>
+            </li>
+
+            <li>
+              <a href="javascript:void(0)">
+                <i class="far fa-circle" data-card-index="1"></i>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
+
     <script type="text/javascript" src="index.min.js"></script>
   </body>
 </html>
