--- a/template.html
+++ b/template.html
@@ -88,9 +88,9 @@
             <p>
               Minimal configuration, statistically valid A/B testing for Ruby on
               Rails. Hyp (as in "hypothesis") allows you to easily run, monitor,
-              and understand A/B tests from your Rails app. Hyp lets you A/B test
-              any part of your application! Test email content, algorithms,
-              server-rendered pages, or anything else you like.
+              and understand A/B tests from your Rails app. Test any part of
+              your application: email content, algorithms, server-rendered pages,
+              or anything else you like!
             </p>
           </a>
 
@@ -103,14 +103,14 @@
             <img alt="A screenshot of the Smile-O-Meter an open source project with a smiley that smiles when you do." src="images/smile-o-meter.png" />
 
             <p>
-              The Smile-O-Meter (under development) is a neural network
-              used to classify images as one of seven emotions. It is written
-              "from scratch", that is, without the use of frameworks such as
-              TensorFlow and Keras. My main goal in working on the Smile-O-Meter
-              was to learn more about machine learning, neural nets, and Python,
-              and to that end it's been a success! In the future I'll be publishing
-              blog posts that describe the architecture and effectiveness of the
-              system.
+              The Smile-O-Meter is a neural network used to classify images as
+              one of seven emotions. It is written "from scratch", that is,
+              without the use of frameworks such as TensorFlow and Keras. The
+              Smile-O-Meter performs data normalization, programmatically trains
+              models with different combinations of hyperparameters (eg learning
+              rate, regularization strength, and network topology), and has
+              hand-written implementations of backward propagation and the Adam
+              optimization algorithm.
             </p>
           </a>
 
