Add new recommendations

--- a/template.html
+++ b/template.html
@@ -134,7 +134,49 @@
         <div class="eight columns offset-by-two">
           <h1>Recommendations</h1>
 
-          <a class="card" target="_blank" href="https://www.linkedin.com/in/josh-wilson-6052081/">
+          <a class="card" target="_blank" href="https://www.linkedin.com/in/alex-quinn-274b2027/">
+            <h3>
+              <strong>Alex Quinn</strong>
+              <i class="fab fa-linkedin"></i>
+            </h3>
+
+            <h5>Director of Engineering at Wunder Capital</h5>
+
+            <blockquote>
+              <em>
+                Dan is a smart and detail-oriented engineer. He has an incredible
+                ability to dive into the deep end of complex problems. In the
+                time we worked together, I felt a large amount of trust when
+                passing him hard problems to solve. I had no doubt he would take
+                those problems and run them to the ground.
+
+                On top of all this, Dan is friendly and personable. I enjoyed
+                working with Dan and would do so again in a heartbeat if the
+                opportunity arises!
+              </em>
+            </blockquote>
+          </a>
+
+          <a class="card hidden" target="_blank" href="https://www.linkedin.com/in/jonleeevans/">
+            <h3>
+              <strong>Jon Evans</strong>
+              <i class="fab fa-linkedin"></i>
+            </h3>
+
+            <h5>Principle Software Engineer at Bonusly</h5>
+
+            <blockquote>
+              <em>
+                Dan and I worked closely together on many projects at Bonusly, and he
+                always delivered well-factored and performant Ruby and JavaScript.
+                He's a joy to work with and intrinsically motivated by building
+                software that both makes the world a better place and that is easy to change.
+              </em>
+            </blockquote>
+          </a>
+
+
+          <a class="card hidden" target="_blank" href="https://www.linkedin.com/in/josh-wilson-6052081/">
             <h3>
               <strong>Josh Wilson</strong>
               <i class="fab fa-linkedin"></i>
@@ -211,6 +253,18 @@
             <li>
               <a href="javascript:void(0)">
                 <i class="far fa-circle" data-card-index="2"></i>
+              </a>
+            </li>
+
+            <li>
+              <a href="javascript:void(0)">
+                <i class="far fa-circle" data-card-index="3"></i>
+              </a>
+            </li>
+
+            <li>
+              <a href="javascript:void(0)">
+                <i class="far fa-circle" data-card-index="4"></i>
               </a>
             </li>
           </ul>
