Add data structures project

--- a/template.html
+++ b/template.html
@@ -114,6 +114,25 @@
             </p>
           </a>
 
+          <a id="data-structures" class="card hidden" target="_blank" href="https://www.github.com/Murphydbuffalo/ruby-data-structures-and-algorithms">
+            <h3>
+              <strong>Ruby Data Structures</strong>
+              <i class="fab fa-github"></i>
+            </h3>
+
+            <img alt="A screenshot of some of the code for the AVL Tree data structure" src="images/avl_tree.png" />
+
+            <p>
+              This repo is an exploration of important data structures such as
+              linked lists, hash maps, resizing arrays, and binary search trees.
+              All of those data structures are implemented in Ruby and desribed
+              in plain English in the README. The goal of this project was to
+              improve my understanding of both the computer science concepts
+              underlying these data structures, as well as their practical
+              applications.
+            </p>
+          </a>
+
           <ul id="projects-carousel" class="carousel">
             <li>
               <a href="javascript:void(0)">
@@ -124,6 +143,12 @@
             <li>
               <a href="javascript:void(0)">
                 <i class="far fa-circle" data-card-index="1"></i>
+              </a>
+            </li>
+
+            <li>
+              <a href="javascript:void(0)">
+                <i class="far fa-circle" data-card-index="2"></i>
               </a>
             </li>
           </ul>
