--- a/template.html
+++ b/template.html
@@ -28,7 +28,7 @@
     <header>
       <div id="modal">
         <div id="headshot">
-          <img title="Huge nerd" alt="A snazzy picture of Dan" height="400" width="400" src="images/profile-pic.jpg" />
+          <img title="Huge nerd" alt="A snazzy picture of Dan" height="400" width="400" src="images/headshot.jpg" />
         </div>
 
         <div id="about-me">
