--- a/template.html
+++ b/template.html
@@ -125,7 +125,7 @@
             <p>
               This repo is an exploration of important data structures such as
               linked lists, hash maps, resizing arrays, and binary search trees.
-              All of those data structures are implemented in Ruby and desribed
+              All of those data structures are implemented in Ruby and described
               in plain English in the README. The goal of this project was to
               improve my understanding of both the computer science concepts
               underlying these data structures, as well as their practical
